# desbordante-profiler

./: .gitignore  LICENSE  README.md  example_profile.yaml  pyproject.toml
profile_examples/: deep_profile.yaml  fast_profile.yaml  medium_profile.yaml
src/: algos_module.py  core_manager.py  data_module.py  desbordante_profiler.py  history_storage.py  logging_conf.py  long_profile.yaml  profiles_module.py  rules_engine.py  scheduler_module.py
src/desbordante_profiler_package/core/: comparer.py  dataset_loader.py  enums.py  history.py  log_config.py  manager.py  mining_algorithms.py  profile_loader.py  rules.py  runner.py  scheduler.py  util.py  verification_algorithms.py
src/desbordante_profiler_package/profiler_cli/: desbordante_profiler.py
src/desbordante_profiler_package/templates/: profiling_digest_template.md.j2  subset_comparison_digest_template.md.j2  version_comparison_digest_template.md.j2
tests/: conftest.py  test_core_manager.py  test_data_module.py  test_dataset_loader.py  test_e2e_run.py  test_history.py  test_history_storage.py  test_integration.py  test_profile_loader.py  test_rules.py  test_rules_engine.py  test_runner.py  test_scheduler_module.py
