[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "Desbordante profiling tool"
authors = ["Desbordante"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
click = "^8.1.8"
pyyaml = "^6.0.2"
psutil = "^5.9.8"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
black = "^23.12.1"
mypy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
