[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desbordante-profiler"
#dynamic = ["version"]
version = "0.1.0.dev0"
authors = ["Desbordante"]
license = "MIT"
description = "A CLI tool for data profiling using the Desbordante library and YAML profiles."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["data profiling", "data quality", "desbordante"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "pandas>=1.3",
    "PyYAML>=5.4",
    "psutil>=5.8",
    "Jinja2>=3.0",
    "desbordante"
]

[project.scripts]
desbordante-profiler = "desbordante_profiler_package.profiler_cli.desbordante_profiler:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
# include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools_scm]
